--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <body>
     <section class="sec1">
         <div class="cadre">
+            <!-- tribute page de djaili amadou -->
             <h1>Djaili Amadou Amal</h1>
         <span>Auteure de les impatientes</span>
         </div>
+        <!-- insertion de l'image de djaili amadou amal -->
         <div class="cadre">
             <img src="image/Djali-Amadou-Amal.jpg" alt="Djaili" class="image">
         </div>
     </section>
     <section class="sec2">
         <div class="cadre3">
+            <!-- biographie de djaili amadou amal -->
             <p>Djaïli Amadou Amal naît en 1975 à Maroua1, dans le département du Diamaré situé dans la région de l'Extrême-Nord du Cameroun.
                 Son père est un juriste camerounais professeur d'arabe et sa mère est égyptienne2,3. Son prénom leur a été inspiré par la chanson Amal Hayati de Oum Kalthoum1.
                Mariée à dix-sept ans dans le cadre d'un mariage forcé, elle parvient à quitter son mari en 1998, après cinq ans de vie commune2.
